kubernetes/overlays/staging/container-resources.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: timetable-web
spec:
  template:
    spec:
      containers:
        - name: web
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: timetable-worker
spec:
  template:
    spec:
      containers:
        - name: worker
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
